New files Obj_reader. Purpose is read any obj file. At this point reading is working, but program only reads v - vertices and f - faces. Also when converting everything to my classes, code paints 3d model blue and green

--- a/OOP_LAB3/OOP_LAB3.vcxproj
+++ b/OOP_LAB3/OOP_LAB3.vcxproj
@@ -149,10 +149,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Classes.cpp" />
+    <ClCompile Include="Obj_reader.cpp" />
     <ClCompile Include="Perspective.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Classes.h" />
+    <ClInclude Include="Obj_reader.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
