--- a/OOP_LAB3/OOP_LAB3.vcxproj.filters
+++ b/OOP_LAB3/OOP_LAB3.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Perspective.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Obj_reader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Classes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Obj_reader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
