--- a/OOP_LAB3/OOP_LAB3.vcxproj
+++ b/OOP_LAB3/OOP_LAB3.vcxproj
@@ -107,7 +107,7 @@
       <PreprocessorDefinitions>SFML_STATIC;WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>E:\VISUAL_STUDIO_ADDONS\SFML-2.5.1\include;</AdditionalIncludeDirectories>
-      <Optimization>Full</Optimization>
+      <Optimization>MaxSpeed</Optimization>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
